feat(security): add unified authentication interceptor